--- a/style.css
+++ b/style.css
@@ -15,32 +15,25 @@ body {
     background-color: white;
     width: 320px;
     height: 497px;
+    padding: 16px;
     border-radius: 15px;
-    margin: auto;
+    font-family: 'Outfit', sans-serif;
+    text-align: center;
 }
 
 .qrcode {
-    width: 288px;
-    height: 288px;
+    width: 100%;
     border-radius: 10px;
-    margin: 16px;
 }
 
-h2, p {
-    font-family: 'Outfit', sans-serif;
-    text-align: center;
-    width: 250px;
-    margin: auto;
-}
-
-h2 {
+.headline {
     color: hsl(218, 44%, 22%);
     font-size: 20px;
     font-weight: 700;
-    margin-bottom: 16px;
+    margin: 16px 0;
 }
 
-p {
+.copy {
     color: hsl(220, 15%, 55%);
     font-size: 15px;
     font-weight: 400;
