--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100vh;
 }
 
 .card {
@@ -19,6 +20,7 @@ body {
     border-radius: 15px;
     font-family: 'Outfit', sans-serif;
     text-align: center;
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
 }
 
 .qrcode {
